# RP2040-Battery-Check

./: CMakeLists.txt  README.md  battery-check.c  battery-check.h
example/: CMakeLists.txt  example.c
